# encrypt_decrypt_demo

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/aes_demo/: decryption.h  encryption.h  params.h
lib/src/: common.cpp  common.h  decryption.cpp  encryption.cpp
test/: CMakeLists.txt  main.cpp
